# navigation

base_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
base_local_planner/include/base_local_planner/: local_planner_util.h  trajectory_planner_ros.h
base_local_planner/src/: trajectory_planner_ros.cpp
global_planner/: bgp_plugin.xml  package.xml
nav_core/: package.xml
nav_core/include/nav_core/: base_global_planner.h  base_local_planner.h
navfn/: CMakeLists.txt  bgp_plugin.xml  package.xml
navfn/include/navfn/: navfn_ros.h
navfn/src/: navfn_ros.cpp
